Fix minor layout issue on index.html

--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@600&family=Caveat&family=Montserrat&display=swap');
 
+html,
+body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 #background {
     position: fixed;
     right: 0;
@@ -38,12 +44,12 @@
 .container {
     position: relative;
     overflow: hidden;
+    margin-top: 193px;
     padding: 0px;
     height: 370px;
     width: auto;
     perspective: 900px;
     transform-style: preserve-3d;
-    margin-top: 186px;
 }
 
 #card1 {
